Cherry-pick 258876@main (60a6090b4106). https://bugs.webkit.org/show_bug.cgi?id=250495

Data written via FileSystemSyncAccessHandle disappears after creating new FileSystemFileHandle
    https://bugs.webkit.org/show_bug.cgi?id=250495
    rdar://104187327

    Reviewed by Chris Dumez.

    FileSystem::openFile truncates file when mode is FileOpenMode::Write.

    * LayoutTests/storage/filesystemaccess/file-handle-getfile-expected.txt:
    * LayoutTests/storage/filesystemaccess/file-handle-getfile-worker-expected.txt:
    * LayoutTests/storage/filesystemaccess/resources/file-handle-getfile.js:
    (async test):
    * Source/WebKit/NetworkProcess/storage/FileSystemStorageHandle.cpp:
    (WebKit::FileSystemStorageHandle::create):

    Canonical link: https://commits.webkit.org/258876@main